fix: changes some styles to make expired shot page text more visible

--- a/static/css/partials/_large-icon-block.scss
+++ b/static/css/partials/_large-icon-block.scss
@@ -47,6 +47,5 @@
     text-align: center;
     font-size: 14px;
     line-height: 26px;
-    color: #4d4d4d;
   }
 }
